# pascii

./: Cargo.toml  README.md  output.ansi
.github/: output.ansi
src/: main.rs  picture.rs
