[package]
name = "pascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
image = { version = "0.24.6", features = [
  "png",
  "jpeg_rayon",
], default-features = false }
rayon = { version = "1.7.0", optional = true }
rgb2ansi256 = "0.1.1"

[profile.release]
lto = true
opt-level = 3
strip = true

[features]
rayon = ["dep:rayon"]
default = []
