[package]
name = "pascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
image = { version = "0.24.6", features = [
    "png",
    "jpeg",
], default-features = false }
rgb2ansi256 = "0.1.1"

[profile.release]
debug = 2
lto = "thin"
opt-level = 3
